fixed the search button not aligning w search bar
the problem was adding margin of y axis  "my-1" that made it look bad.

--- a/src/style.css
+++ b/src/style.css
@@ -1,33 +1,42 @@
 h1 {
   color:rgb(186, 7, 67);
 }
-#weatherIcon {
-  font-size: 48px;
-  position: relative;
-  top: 12px;
-  font-variation-settings:
-    'FILL' 1,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48
+
+body{
+  background-color: rgb(221, 234, 255);
+}
+h6 {
+  font-weight: 200;
+}
+h3{
+  margin-bottom: 18px;
+}
+li {
+  color: rgba(23, 11, 77, 0.856);
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 20px;
+  list-style: none;
+  display: inline;
+  margin: 0px;
+}
+ul {
+  padding: 0;
+  text-align: center;
 }
 .app {
   margin: 60px auto;
   max-width: 800px;
 }
+
 .container {
   border-radius: 28px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, .08);
   background: radial-gradient(circle at 10% 20%,
-        rgb(137, 210, 253) 0%,
-        rgb(255, 241, 188) 90%);
+      rgb(137, 210, 253) 0%,
+      rgb(255, 241, 188) 90%);
 }
-body{
-  background-color: rgb(221, 234, 255);
-}
-
 .btn {
-  border-left:none ;
   background-color: #f5f5f5;
   border: none;
   border-radius: 15px;
@@ -41,8 +50,9 @@ body{
 }
 .form-control {
   height: 48px;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 15px;
   background-color:#f5f5f5;
+  border: none;
 }
 .form-control:focus {
   background-color: transparent;
@@ -52,27 +62,21 @@ body{
   font-size:small;
   font-weight: 600;
 }
-li{
-  color: rgba(23, 11, 77, 0.856);
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 20px;
-    list-style: none;
-    display: inline;
-    margin: 0px;
-}
-ul{
-  padding:0;
-  text-align: center;
-}
 #searchIcon{
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
 }
 .current-icon{
+  line-height: 1;
   font-size: 32px;
   font-weight: 300;
   margin-right: 10px;
+    font-size: 48px;
+      font-variation-settings:
+        'FILL' 1,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 48
 }
 
 .forecast-days, .weather-icon, h6{
@@ -84,9 +88,6 @@ ul{
   margin-bottom: 15px;
 }
 
-h6{
-  font-weight:200;
-}
 .weather-temperature, h1{
   line-height: 1;
   font-size: 50px;
